--- a/desing/default.scss
+++ b/desing/default.scss
@@ -12,6 +12,10 @@
 	--noir: #000000;
 	--background: #f6f6f6;
 }
+body{
+	font-family: "Roboto";
+	font-size: 1.2rem;
+}
 #chargement {
 	background-color: #9356dc;
 	position: fixed;
@@ -61,7 +65,8 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	border: 10px solid var(--primaire);
+	border-right: 10px solid transparent;
+	border-left: 10px solid var(--primaire);
 	border-top: 10px solid var(--secondaire);
 	border-bottom: 10px solid var(--tertiaire);
 	border-radius: 50%;
@@ -82,6 +87,7 @@
 		transform: rotate(360deg);
 	}
 }
+
 
 h3 {
 	font-family: "Roboto";
@@ -325,6 +331,7 @@ main {
 
 .heartHover:hover {
 	color: var(--primaire);
+	background-color: white;
 	opacity: 1;
 	transform: scale(1.15);
 }
@@ -422,11 +429,11 @@ a {
 			align-items: center;
 			padding: 1rem;
 			max-width: 900px;
-			margin: 0.5rem auto;
+			margin: 1rem auto 2rem;
 			h2 {
 				font-family: "Shrikhand";
-				font-size: 1.5rem;
-				font-weight: normal;
+				font-size: 1.7rem;
+				font-weight: bold;
 			}
 		}
 		.menu {
@@ -434,6 +441,7 @@ a {
 			.trait {
 				width: 3rem;
 				border: 2px solid var(--tertiaire);
+				background-color: var(--tertiaire);
 			}
 			.menuEntree {
 				li p {
@@ -449,7 +457,7 @@ a {
 					border-radius: 1rem;
 					margin: 1rem 0;
 					font-size: 1rem;
-					font-family: "Roboto", serif;
+					font-family: "Roboto", sans-serif;
 					transition-duration: 0.3s;
 					cursor: pointer;
 					box-shadow: 0 0 0.3rem 0.05rem #dadada;
@@ -458,10 +466,15 @@ a {
 
 					.menuTitre {
 						padding: 1rem 1rem 0 1rem;
+						font-size: 1.3rem;
+						font-family: "Roboto", sans-serif;
 						font-weight: bold;
 					}
 					.menuSousTitre {
-						padding: 0 1rem 1rem 1rem;
+						padding: 0.5rem 1rem 1rem 1rem;
+						font-size: 1.3rem;
+						font-family: "Roboto", sans-serif;
+						font-weight: normal;
 					}
 					.menuConfirmation {
 						position: absolute;
@@ -587,10 +600,11 @@ a {
 		background-color: var(--secondaire);
 		border-radius: 1.5rem;
 		margin: 2rem auto;
-	}
-	.heartHover {
+		.heartHover {
 		background-color: var(--secondaire);
 	}
+	}
+	
 
 	.nomDuRestaurant_titre:hover {
 		transition-duration: 1s;
